# GRASPA-benchmark

./: .gitignore  .gitpod.yml  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt
.github/workflows/: docker-image.yml
data/: README.md
data/objects/: README.md  frame.xml  layout_base.xml
data/objects/YCB/banana/: nontextured.stl  nontextured.xml  projection.wrl  projection.xml
data/objects/YCB/chips/: projection.xml
data/objects/YCB/chips_can/: nontextured.stl  nontextured.xml  projection.wrl
data/objects/YCB/cracker/: nontextured.stl  projection.wrl  projection_horizontal.xml
data/objects/YCB/cracker_box/: nontextured.stl  nontextured.xml  nontextured_vertical.stl  nontextured_vertical.xml  projection.xml  projection_horizontal.wrl
data/objects/YCB/drill/: nontextured.xml  projection.xml
data/objects/YCB/foam_brick/: nontextured.stl  nontextured.xml  projection.xml
data/objects/YCB/gelatin/: nontextured.stl  nontextured.xml  projection.wrl
data/objects/YCB/gelatin_box/: nontextured.stl  projection.xml
data/objects/YCB/hammer/: nontextured.stl  nontextured.xml  projection.wrl  projection.xml
data/objects/YCB/master_chef_can/: nontextured.stl  projection.xml
data/objects/YCB/masterchef/: nontextured.xml  projection.wrl
data/objects/YCB/medium_clamp/: nontextured.stl  nontextured.xml  projection.wrl  projection.xml
data/objects/YCB/mustard/: nontextured.stl  nontextured.xml  projection.xml
data/objects/YCB/mustard_bottle/: nontextured.stl  projection.wrl
data/objects/YCB/pear/: nontextured.stl  nontextured.xml  projection.wrl  projection.xml
data/objects/YCB/potted_meat_can/: nontextured.stl  nontextured.xml  projection.xml
data/objects/YCB/power_drill/: nontextured.stl  projection.wrl
data/objects/YCB/scissors/: nontextured.stl  nontextured.xml  not_in_plane_nontextured.stl  projection.wrl  projection.xml
data/objects/YCB/spam/: nontextured.stl  projection.wrl
data/objects/YCB/strawberry/: nontextured.stl  nontextured.xml  projection.wrl  projection.xml
data/objects/YCB/tennis_ball/: nontextured.stl  nontextured.xml  projection.wrl  projection.xml
data/objects/YCB/tomato_can/: nontextured.stl  projection.xml
data/objects/YCB/tomato_soup_can/: nontextured.stl  nontextured.xml  projection.wrl
data/objects/iv/: board_empty.iv  board_layout_0.iv  board_layout_1.iv  board_layout_2.iv  board_layout_empty.iv  layout_base.iv
data/objects/markers/marker_id_107/: marker_107.iv  marker_107.wrl  marker_107.xml
data/objects/markers/marker_id_113/: marker_113.iv  marker_113.wrl  marker_113.xml
data/objects/markers/marker_id_74/: marker_74.iv  marker_74.wrl  marker_74.xml
data/objects/misc/: frame.wrl
data/scenes/: README.md
data/scenes/camera_calibration/: camera_calibration_poses.xml  camera_calibration_poses_l.xml
data/scenes/grasping/: scene1.xml  scene1_printable.xml  scene2.xml  scene2_printable.xml  scene3.xml  scene3_printable.xml
data/scenes/grasping/2D_scenes/: layout_0_printable.xml  layout_1_printable.xml  layout_2_printable.xml  scene3_printable.xml
data/scenes/grasping/3D_scenes/: layout_0.xml  layout_1.xml  layout_2.xml  layout_empty.xml  scene1.xml  scene2.xml  scene3.xml
data/scenes/grasping/masks/: scene2_printable.xml
data/scenes/reachability/: reachability_scene_1.xml  reachability_scene_2.xml  reachability_scene_3.xml  reachability_set_poses_1.xml  reachability_set_poses_2.xml  reachability_set_poses_2l.xml  reachability_set_poses_3.xml
data/scenes/reachibility/: reachability_scene_1.xml  reachability_scene_2.xml  reachability_scene_3.xml
data/template_files/: README.md  reached_poses.xml
data/template_files/camera_calibration/: camera_calibration_output.xml
data/template_files/grasps_data/: YcbBanana_grasp.xml  YcbMustardBottle_grasp.xml
data/template_files/grasps_data/layout_0/: YcbBanana_grasp.xml
data/template_files/reached_poses/: reached_set_poses_1.xml  reached_set_poses_2.xml  reached_set_poses_3.xml
data_collection/: README.md
docker/: Dockerfile  entrypoint.sh
src/: CMakeLists.txt  README.md  scores_evaluation.py  scores_evalution.py  script_launcher.sh  script_launcher_icub.sh  script_launcher_panda.sh
src/compute-grasp-quality/: CMakeLists.txt  README.md  SceneViewer.cpp  cgq.cpp  cgq.h  common.cpp  common.h  showSceneWindow.cpp
src/compute-grasp-quality-with-visu/: CMakeLists.txt  README.md  SceneViewer.cpp  SceneViewer.ui  common.cpp  common.h  showSceneWindow.cpp  showSceneWindow.h
src/layout-printer/: CMakeLists.txt  README.md  SceneViewer.cpp  SceneViewer.ui  layout_printer.py  showSceneWindow.cpp  showSceneWindow.h
src/scene-viewer/: CMakeLists.txt  README.md  SceneViewer.cpp  SceneViewer.ui  showSceneWindow.cpp  showSceneWindow.h
